Fixed some buttons spacing

--- a/bookkeeping-app/src/components/elements/modals/AccountModal.module.css
+++ b/bookkeeping-app/src/components/elements/modals/AccountModal.module.css
@@ -128,3 +128,8 @@
     color: red;
     font-size: var(--small-font-size);
 }
+
+.actionItems button {
+    padding: 0.25rem 0.5rem;
+    margin-left: 0.5rem;
+}
