--- a/bookkeeping-app/src/components/elements/utilities/Button.module.css
+++ b/bookkeeping-app/src/components/elements/utilities/Button.module.css
@@ -1,8 +1,7 @@
 .button {
     padding: 0.5rem 1rem;
 
-    /* background-color: var(--primary-color); */
-    background-color: red;
+    background-color: var(--primary-color);
     color: white;
     cursor: pointer;
     font-family: "poppins";
